@@ -619,3 +619,6 @@ FIXED: Fixed spiked/chomped/bumped guards teleporting into the wrong room. (if f
 	Details: https://github.com/NagyD/SDLPoP/pull/237
 FIXED: Quicksave during feather fall mode. (if fixes are enabled)
 	Details: https://github.com/NagyD/SDLPoP/pull/236
+FIXED: Prevent the prince from entering a glitched room when he falls into a wall or he is revived near a wall.
+	Details: replays-testcases/Original level 2 falling into wall.txt
+	Testcase: replays-testcases/Original level 2 falling into wall.p1r
